[package]
name = "NtH1M"
authors = ["Late Binit Ghimire <thebinitghimire@gmail.com>", "Captain Nick Lucifer* <naryal2580@gmail.com>"]
version = "0.2.5"
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
description = "Now, the Host is Mine! - Super Fast Sub-domain Takeover Detection!"
homepage = "https://github.com/c4p-n1ck/NtH1M/"
documentation = "https://github.com/c4p-n1ck/NtH1M/"
repository = "https://github.com/c4p-n1ck/NtH1M/"
readme = "README.md"
keywords = ["host-takeover", "subdomain-takeover", "pentesting", "bug-bounty", "red-teaming"]
exclude = []

[dependencies]
ansi_term = "0.12.1"
clap = "3.0.10"
futures = { version = "0.3.15" }
http = { version = "0.2.6" }
reqwest = { version = "0.11.8", features = ["blocking"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
platform-dirs = "0.3.0"
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
